Task_16/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: flask-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: x-umarov.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: flask-cluster
            port:
              number: 80
        path: /check-ingress
        pathType: Prefix
status:
  loadBalancer: {}
